# pixie3d-framework

./: .cmake-format.py  .fprettify.rc  .gitignore  .gitlab-ci.yml  .hgignore  CMakeLists.txt  Makefile  common_contrib.tgz  fft
3dplot/: 3dplot.F  3dplot.f  ADIOS2_graphics_mod.F90  ADIOS_graphics_mod.F  CMakeLists.txt  HDF5_graphics_mod.F  Makefile  acc_test_mod.F  fortranDestroy.F  graphics_mod.F  make.inc  plot_mod.F  xdraw_graphics_mod.F  xdraw_graphics_mod.f
BC/: BCS_variables_mod.f  imposeBCinterface_mod.F
MG/: CMakeLists.txt  MG_INTERNAL.mod  Makefile  coupledMG.F  coupledMG.f  make.inc
OMP/: CMakeLists.txt  OMP_mod.F  make.inc
contrib/: CMakeLists.txt
contrib/btridiag/: BTDS_mod.f  Makefile  make.local
contrib/fortran-utils/src/: Makefile  make.local  special.f90
contrib/fpa/config/: config
contrib/fpa/src/: Makefile  fixed_point_accelerator.F90  make.local
contrib/fpa/test/: Makefile
contrib/lsode/: dintdy.f  dprepj.f  dsolsy.f  dsrcom.f  dstode.f  lsode.f  makefile
contrib/lsode/examples/: exlsode.f
contrib/ptridiag/: Makefile  make.local  ptridiag.F
contrib/rng/src/: CHSRAN.f  Makefile  UNIRAN.f  hammersley_mod.f90  make.local  normal_mod.f
contrib/sdc/src/: Makefile  make.local  realKindModule.f90  sdcIntegrationModule.f90  sdcModule.f90
contrib/sdc/test/: thermalWave.f90  thermalWaveInitializationModule.f90  thermalWaveModule.f90  thermalWaveSolutionModule.f90
contrib/slatec/: Makefile  make.local
contrib/slatec/1d_spline/: spline_files
contrib/slatec/2d_spline/: spline.files
contrib/slatec/3d_spline/: 3d_spline.files  DB3VAL.f
contrib/slatec/spline_common/: spline_mod.f
contrib/slatec/xerror/: I1MACH.f  J4SAVE.f  XERCNT.f  XERCTL.f  XERHLT.f  XERPRN.f  XERROR.f  XERRWV.f  XERSAV.f  XERSVE.f  xerror.files
contrib/torh/src/: make.local
driver/: CMakeLists.txt  Makefile  PC_ifces.F  driver.F  driver.f  driver_mod.F  driver_mod.f  evaluateNonlinearResidual.F  evaluateNonlinearResidual.f  fortranDestroy.F  graphics_mod.f  initializeCalculation.F  initializeCalculation.f  make.inc  newtongm_mod.F  setupPC.f
driver-2d/: driver.f  driver_mod.f  evaluateNonlinearResidual.f  initializeCalculation.f  make.inc  mgSolver.f  operators.f  resistiveWallBC.f  xdrawGraphics.f
driver-petsc/: applyShellPC.f  correctTimeStep.f  createSetVariables.f  defineTSParameters.f  driver.c  driver_mod.F  evaluateNonlinearResidual.f  formEquilibrium.F  formEquilibrium.f  formInitialCondition.f  fortran.h  fortrandestroy.f  initializeCalculation.f  make.inc  newtongm_mod.F  processOldSolution.f  readInputFile.f  setupShellPC.f  setup_mod.F  writeOutputData.f  writeOutputDataHDF5.f  writeOutputDataHDF5c.h
driver-samrai/: CommPatchData.C  CommPatchData.h  F90C_if.C  ImplicitPixie3dApplication.C  ImplicitPixie3dApplication.h  ImplicitPixie3dApplicationParameters.C  ImplicitPixie3dApplicationParameters.h  LevelContainer.C  LevelContainer.h  PCComponentFACSolver.C  PCComponentFACSolver.h  PCDensityLevelOperator.C  PCDensityLevelOperator.h  PCDensityMultilevelOperator.C  ProfilerApp.C  (+57 more)
driver_setup/: CMakeLists.txt  driver_mod.F  make.inc  nksetup_mod.F  proj_int_mod.F  ts_base_mod.F  ts_if_mod.F  ts_io_mod.F  ts_mod.F  ts_nk_setup_mod.F  ts_setup_mod.F
eigen/: CMakeLists.txt  eigen.F  make.inc
fft1d/: CMakeLists.txt  fft.f  make.inc  test.f
grid/: #grid_diffops_mod.F#  CMakeLists.txt  Makefile  bc_def_mod.F  debug_mod.F  grid_anal_map_mod.F  grid_bc_mod.F  grid_create_mod.F  grid_debug_mod.F  grid_def_mod.F  grid_diffops_mod.F  grid_metric_mod.F  grid_mg_mod.F  grid_mod.F  grid_mod.f  grid_mpi_mod.F  grid_operations_mod.F  grid_pack_mod.F  grid_petsc_mod.F  grid_spline_mod.F  grid_structures_mod.F  local_mpi_mod.F  make.inc  xdraw_io_mod.F
interpolation/: CMakeLists.txt
interpolation/1d_int/: 1dIntDriver.f  1dIntDriver_mod.f  CMakeLists.txt  Makefile  cubic_spline.doc  cubic_spline.files  make.inc
interpolation/polynomial/: CMakeLists.txt  DPOLCF.f  make.inc  polynomial.doc  polynomial.files
interpolation/slatec/: make.inc
interpolation/slatec/1d_spline/: make.inc  spline_files
interpolation/slatec/spline_common/: spline_mod.f
interpolation/slatec/xerror/: XERMSG.f  XERPRT.f  make.inc
io/: CMakeLists.txt  adios_config.xml  graphics_io_mod.F  graphics_variables_mod.F  io_mod.F  make.inc  xdraw_io_mod.F
math/: CMakeLists.txt  MATH.mod  elliptic.f90  make.inc  math_mod.F  math_mod.f
matrixLightSolver/: CMakeLists.txt  Makefile  coupledMG.f  make.inc  makefile  matrixLightSolver.f  mg_mod.f  mlSolver.F  mlsolver_mod.f
mk/: CMakeLists.txt  make.inc  makefile  mk_mod.F  mk_pc_mod.F
newtonGMRES/: CMakeLists.txt  Makefile  make.inc  newtonGMRES.f  nk_mod.F  nk_mod.f
orbit/: CMakeLists.txt  lyapn_mod.F  make.inc  makefile  orbit_mod.F  par_int_mod.F  poincare_io_mod.F  spline_mod.f
pic/: CMakeLists.txt
pic/2d/: CMakeLists.txt  cprecision.h  make.inc  pic.h  pic_base_mod.F  pic_defs.h  pic_mod.F  rand.cpp
pic/2d/problem_init/: DefaultLoadPartls_qs.f  RandomLoadPartls.f  UniformLoadPartls.f  UniformLoadPartls_qs.f  WeibelLoadPartls_qs.f  icLoadPartls_qs.f  icPerturb.f  kawiiLoadPartls.f  kawiiLoadPartls_qs.f  kawiiPerturb.f  qsRandn.f  slowShockPerturb.f
pic/3d/: CMakeLists.txt  Fcc_mod.F  make.inc  makefile  mover.cpp  pic.cu  pic3d_base_mod.F  pic3d_mod.F  pic_defs.h  pic_kernel.cuh  rand.h
pic/3d/problem_init/: AnisoLoadPartls_qs.f  AnisoLoadPartls_qs.f~  DefaultLoadPartls.f  DefaultLoadPartls_qs.f  DefaultLoadPartls_qs.f~  UniformLoadPartls.f  UniformLoadPartls_qs.f  WeibelLoadPartls.f  WeibelLoadPartls_qs.f  WeibelPerturb.f  icLoadPartls.f  icLoadPartls_qs.f  icPerturb.f  kawiiLoadPartls.f  kawiiLoadPartls_qs.f  kawiiPerturb.f  qsRandn.f  slowShockLoadPartls.f
pic/hyb3d/: CMakeLists.txt  Fcc_mod.F  cprecision.h  hyb3d_base_mod.F  hyb3d_base_mod.F~  hyb3d_mod.F  make.inc  makefile  problem_init
var_setup/: ADIOS2_io_mod.F90  ADIOS_io_mod.F  CMakeLists.txt  adios1.10.0_config.xml  adios1.3.1_config.xml  adios2.5.0_config.xml  adios_config.xml  make.inc  setup_mod.F  var_bc_mod.F  var_io_mod.F  var_mod.F  var_setup_mod.F
(+86 files in other folders)
